--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     }
   ],
   "require": {
-    "php" : "^7.0",
-    "automattic/woocommerce": "1.3.*"
+    "php" : "^7.0|^8.0",
+    "automattic/woocommerce": "^3.0"
   },
   "autoload": {
     "psr-4": {
@@ -37,7 +37,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5",
+    "phpunit/phpunit": "^9.0",
     "mockery/mockery": "^1.0",
     "satooshi/php-coveralls": "^1.0"
   },
