--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,82 @@
 {
-  "name": "pixelpeter/laravel5-woocommerce-api-client",
-  "description": "Laravel 5 wrapper for the Woocommerce REST API",
-  "keywords": [
-    "laravel",
-    "wordpress",
-    "woocommerce",
-    "rest",
-    "api",
-    "ecommerce",
-    "e-commerce",
-    "shop",
-    "cart"
-  ],
-  "homepage": "https://github.com/pixelpeter/laravel5-woocommerce-api-client",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Peter Haak",
-      "email": "info@pixelpeter.de",
-      "homepage": "https://pixelpeter.de/",
-      "role": "Developer"
-    }
-  ],
-  "require": {
-    "php" : "^7.0|^8.0",
-    "automattic/woocommerce": "^3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Pixelpeter\\Woocommerce\\": "src"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Pixelpeter\\Woocommerce\\Test\\": "tests"
-    }
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.0",
-    "mockery/mockery": "^1.0",
-    "satooshi/php-coveralls": "^1.0"
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Pixelpeter\\Woocommerce\\WoocommerceServiceProvider"
-      ],
-      "aliases": {
-        "Woocommerce": "Pixelpeter\\Woocommerce\\Facades\\Woocommerce"
-      }
-    }
-  }
+    "name": "pixelpeter/laravel5-woocommerce-api-client",
+    "description": "Laravel 5 wrapper for the Woocommerce REST API",
+    "keywords": [
+        "laravel",
+        "wordpress",
+        "woocommerce",
+        "rest",
+        "api",
+        "ecommerce",
+        "e-commerce",
+        "shop",
+        "cart"
+    ],
+    "homepage": "https://github.com/pixelpeter/laravel5-woocommerce-api-client",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Peter Haak",
+            "email": "info@pixelpeter.de",
+            "homepage": "https://pixelpeter.de/",
+            "role": "Developer"
+        },
+        {
+            "name": "palPalani",
+            "email": "palani.p@gmail.com",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": "^7.0|^8.0",
+        "automattic/woocommerce": "^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Pixelpeter\\Woocommerce\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Pixelpeter\\Woocommerce\\Test\\": "tests"
+        }
+    },
+    "require-dev": {
+        "nunomaduro/collision": "^5.10",
+        "nunomaduro/larastan": "^1.0",
+        "orchestra/testbench": "^6.22",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-laravel": "^1.1",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-ray": "^1.26",
+        "mockery/mockery": "^1.0",
+        "satooshi/php-coveralls": "^1.0"
+    },
+    "scripts": {
+        "analyse": "vendor/bin/phpstan analyse",
+        "test": "vendor/bin/pest",
+        "test-coverage": "vendor/bin/pest coverage"
+    },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Pixelpeter\\Woocommerce\\WoocommerceServiceProvider"
+            ],
+            "aliases": {
+                "Woocommerce": "Pixelpeter\\Woocommerce\\Facades\\Woocommerce"
+            }
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
