--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,6 @@
 /UPGRADING.md       export-ignore
 /phpstan.neon.dist  export-ignore
 /phpstan-baseline.neon  export-ignore
+/CHANGELOG.md
+/LICENSE.md
+/README.md
