--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pixelpeter/laravel5-woocommerce-api-client",
-    "description": "Laravel 5 wrapper for the Woocommerce REST API",
+    "description": "Laravel wrapper for the Woocommerce REST API",
     "keywords": [
         "laravel",
         "wordpress",
@@ -29,7 +29,8 @@
     ],
     "require": {
         "php": "^7.0|^8.0",
-        "automattic/woocommerce": "^3.0"
+        "automattic/woocommerce": "^3.0",
+        "friendsofphp/php-cs-fixer": "^3.13"
     },
     "autoload": {
         "psr-4": {
@@ -51,9 +52,8 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26",
         "mockery/mockery": "^1.0",
-        "satooshi/php-coveralls": "^2.2"
+        "php-coveralls/php-coveralls": "^2.2"
     },
     "scripts": {
         "analyse": "vendor/bin/phpstan analyse",
