--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,8 @@
         }
     ],
     "require": {
-        "php": "^7.0|^8.0",
-        "automattic/woocommerce": "^3.0",
-        "friendsofphp/php-cs-fixer": "^3.13"
+        "php": "^7.4|^8.0",
+        "automattic/woocommerce": "^3.1"
     },
     "autoload": {
         "psr-4": {
@@ -43,6 +42,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.13",
         "nunomaduro/collision": "^5.10|^6.0|^7.0",
         "nunomaduro/larastan": "^1.0|^2.0",
         "orchestra/testbench": "^6.22|^7.0|^8.0",
