--- a/composer.json
+++ b/composer.json
@@ -45,13 +45,12 @@
         "friendsofphp/php-cs-fixer": "^3.13",
         "nunomaduro/collision": "^7.0|^8.0",
         "larastan/larastan": "^2.0",
-        "orchestra/testbench": "^8.0|^9.0",
-        "pestphp/pest": "^1.21|^2.0",
-        "pestphp/pest-plugin-laravel": "^1.1|^2.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "pestphp/pest": "^^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0|^3.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5|^10.0|^11.0",
         "mockery/mockery": "^1.0",
         "php-coveralls/php-coveralls": "^2.2"
     },
